@@ -1,2 +1,5 @@
 import sys, os 
+import warnings
+warnings.simplefilter('ignore', RuntimeWarning)
 from _raknet_ import *
+warnings.resetwarnings( ) 
